// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsLotteryInfo displays the Merry Go Round Housing description for its listing 1`] = `
<DocumentFragment>
  <div
    class="info-card"
  >
    <div
      class="info-card__header"
    >
      <h3
        class="info-card__title"
      >
        Single Room Occupancy
      </h3>
    </div>
    <div
      class="markdown info-card__content"
    >
      <span>
        This property offers single rooms for up to 2 people only. Tenants may share bathrooms, and sometimes kitchen facilities.
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsLotteryInfo displays the SRO info box for a regular SRO 1`] = `
<DocumentFragment>
  <div
    class="info-card"
  >
    <div
      class="info-card__header"
    >
      <h3
        class="info-card__title"
      >
        Single Room Occupancy
      </h3>
    </div>
    <div
      class="markdown info-card__content"
    >
      <span>
        This property offers single rooms for one person only. Tenants may share bathrooms, and sometimes kitchen facilities.
      </span>
    </div>
  </div>
</DocumentFragment>
`;
